# pysimpleconfig

./: requirements.txt  setup.cfg
src/pysimpleconfig/: __init__.py  main.py
