[metadata]
name = pysimpleconfig
version = 0.0.2
author = rtfcv
author_email = author@example.com
description = very basic config manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rtfcv/pysimpleconfig
project_urls =
    Bug Tracker = https://github.com/rtfcv/pysimpleconfig/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    psutil

[options.packages.find]
where = src
